<resources>
    <string name="app_name">SwiggyClone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="searchcuisines">Search for restaurant, items or more</string>
    <string name="loginTextNumber">Enter your Number</string>
    <string name="loginTextPassword">Enter Your Password</string>
    <string name="_5705_centennial_center_blvd_ste_120_las_vegas_nv_89149">5705 Centennial Center Blvd, Ste #120, Las Vegas, NV 89149</string>
    <string name="_91_6261319133">+91 6261319133</string>
    <string name="jelly_grande">Jelly Grande</string>
    <string name="change">Change</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="apartment">Apartment</string>
    <string name="postal_code">Postal code</string>
    <string name="city">City</string>
    <string name="select_state">Select State</string>
    <string name="united_states">United States</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="swiggy">Swiggy</string>
    <string name="food">Food</string>
    <string name="search">Search</string>
</resources>