<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".cart.view.cartAddress.CartAddressFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:padding="@dimen/_4sdp"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/rmedium"
            android:text="Checkout"
            android:textColor="@color/black"
            android:textSize="@dimen/_21sdp" />

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/rmedium"
            android:padding="@dimen/_4sdp"
            android:textSize="@dimen/_32sdp"
            android:text="Delivery"
            />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:paddingVertical="@dimen/_8sdp"
                android:layout_marginHorizontal="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@drawable/background_search_ic"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/nameEditLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/deliveryAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="@dimen/_12ssp"
                        android:fontFamily="@font/firesans_regular"
                        android:gravity="center_vertical"
                        android:paddingVertical="@dimen/_2sdp"
                        android:text="@string/delivery_address"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp" />

                    <TextView
                        android:id="@+id/tvChangeAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="@dimen/_12sdp"
                        android:fontFamily="@font/lato_bold"
                        android:gravity="center_vertical"
                        android:paddingVertical="@dimen/_2sdp"
                        android:text="@string/change"
                        android:textColor="@color/orange"
                        android:textSize="@dimen/_12ssp" />

                    <TextView
                        android:id="@+id/tvUserName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/deliveryAddress"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="@dimen/_12ssp"
                        android:fontFamily="@font/lato_bold"
                        android:gravity="center_vertical"
                        android:paddingVertical="@dimen/_2sdp"
                        android:text="@string/jelly_grande"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10sdp" />

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/numberaddressLayout"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/nameEditLayout"
                    android:layout_marginStart="@dimen/_12ssp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvUserNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato_regular"
                        android:gravity="start"
                        android:text="@string/_91_6261319133"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp">

                    </TextView>

                    <TextView
                        android:id="@+id/tvAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:fontFamily="@font/lato_regular"
                        android:gravity="start"
                        android:text="@string/_5705_centennial_center_blvd_ste_120_las_vegas_nv_89149"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp"/>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp">

                </RelativeLayout>
            </RelativeLayout>



        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_alignParentLeft="true"
            android:fontFamily="@font/rmedium"
            android:text="Delivery method"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_9sdp"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:background="@drawable/background_search_ic"
                android:layout_centerInParent="true"
                android:layout_height="wrap_content">
                <RadioGroup
                    android:layout_width="match_parent"
                    android:padding="@dimen/_14sdp"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:buttonTint="@color/orange"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_12sdp"
                        android:text="Door Delivery"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:layout_alignBottom="@id/layoutProfile"
                        android:background="@color/orange" />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:textSize="@dimen/_12sdp"
                        android:buttonTint="@color/orange"
                        android:layout_height="wrap_content"
                        android:text="Pick up"/>

                </RadioGroup>



            </LinearLayout>



        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:fontFamily="@font/rmedium"
                android:text="Total"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sdp" />

            <TextView
                android:id="@+id/tvTotalAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:fontFamily="@font/rmedium"
                android:text="$ 130"
                android:textColor="@color/orange"
                android:textSize="@dimen/_18sdp" />
        </RelativeLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnProceed"
        android:layout_width="@dimen/_195sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_45sdp"
        android:background="@drawable/background_button_orange"
        android:text="Proceed to Payment"
        android:textAllCaps="false"
        android:textColor="@color/white" />
</LinearLayout>