<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    android:focusable="true"
    android:clickable="true"
    android:layout_height="match_parent"
    tools:context=".userAccount.view.UserAddressFragment">
    <include
        android:id="@+id/commonTitleBar"
        layout="@layout/common_title_bar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_12sdp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:text="Delivery Address"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp">
        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_8sdp"
            android:weightSum="2"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"

                android:theme="@style/EditTextTheme">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeColor="@color/orange"
                    app:hintTextColor="@color/black"
                    app:boxCornerRadiusTopStart="@dimen/_4sdp"
                    android:id="@+id/textInputFirstName"
                    app:boxCornerRadiusBottomEnd="@dimen/_4sdp"
                    app:boxCornerRadiusTopEnd="@dimen/_4sdp"
                    app:boxCornerRadiusBottomStart="@dimen/_4sdp"
                    style="@style/EditTextOutLineStyle">
                    <EditText
                        android:id="@+id/shipFirstName"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="@dimen/_4sdp"
                        android:hint="@string/first_name"
                        android:textSize="@dimen/_10sdp"
                        android:paddingVertical="@dimen/_9sdp"
                        android:autofillHints="">
                    </EditText>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:theme="@style/EditTextTheme">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeColor="@color/orange"
                    app:hintTextColor="@color/black"
                    app:boxCornerRadiusTopStart="@dimen/_4sdp"
                    app:boxCornerRadiusBottomEnd="@dimen/_4sdp"
                    app:boxCornerRadiusTopEnd="@dimen/_4sdp"
                    app:boxCornerRadiusBottomStart="@dimen/_4sdp"
                    style="@style/EditTextOutLineStyle">
                    <EditText
                        android:id="@+id/shipLastName"
                        android:layout_width="match_parent"
                        android:layout_marginStart="@dimen/_4sdp"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:paddingHorizontal="@dimen/_4sdp"
                        android:hint="@string/last_name"
                        android:textSize="@dimen/_10sdp"
                        android:paddingVertical="@dimen/_9sdp">
                    </EditText>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginVertical="@dimen/_4sdp"
            android:theme="@style/EditTextTheme">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/orange"
                app:hintTextColor="@color/black"
                app:boxCornerRadiusTopStart="@dimen/_4sdp"
                app:boxCornerRadiusBottomEnd="@dimen/_4sdp"
                app:boxCornerRadiusTopEnd="@dimen/_4sdp"
                app:boxCornerRadiusBottomStart="@dimen/_4sdp"
                style="@style/EditTextOutLineStyle">
                <EditText

                    android:id="@+id/shipPhoneNumber"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:maxLength="12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/_4sdp"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:hint="Phone Number"
                    android:textSize="@dimen/_10sdp"
                    android:paddingVertical="@dimen/_9sdp">
                </EditText>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_4sdp"
            android:visibility="gone"
            android:orientation="vertical"
            android:theme="@style/EditTextTheme">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/orange"
                app:hintTextColor="@color/black"
                app:boxCornerRadiusTopStart="@dimen/_4sdp"
                app:boxCornerRadiusBottomEnd="@dimen/_4sdp"
                app:boxCornerRadiusTopEnd="@dimen/_4sdp"
                app:boxCornerRadiusBottomStart="@dimen/_4sdp"
                style="@style/EditTextOutLineStyle">

                <EditText
                    android:id="@+id/shipApartment"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:visibility="gone"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:paddingHorizontal="@dimen/_4sdp"
                    android:hint="@string/apartment"
                    android:textSize="@dimen/_10sdp"
                    android:paddingVertical="@dimen/_9sdp">
                </EditText>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_4sdp"
            android:orientation="vertical"
            android:theme="@style/EditTextTheme">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/orange"
                app:hintTextColor="@color/black"
                app:boxCornerRadiusTopStart="@dimen/_4sdp"
                app:boxCornerRadiusBottomEnd="@dimen/_4sdp"
                app:boxCornerRadiusTopEnd="@dimen/_4sdp"
                app:boxCornerRadiusBottomStart="@dimen/_4sdp"
                style="@style/EditTextOutLineStyle">
                <EditText
                    android:id="@+id/shipAddress"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/_4sdp"
                    android:hint="Address"
                    android:textSize="@dimen/_10sdp"
                    android:paddingVertical="@dimen/_9sdp">
                </EditText>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginVertical="@dimen/_4sdp"
            android:weightSum="2">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:theme="@style/EditTextTheme">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeColor="@color/orange"
                    app:hintTextColor="@color/black"
                    app:boxCornerRadiusTopStart="@dimen/_4sdp"
                    app:boxCornerRadiusBottomEnd="@dimen/_4sdp"
                    app:boxCornerRadiusTopEnd="@dimen/_4sdp"
                    app:boxCornerRadiusBottomStart="@dimen/_4sdp"
                    style="@style/EditTextOutLineStyle">
                    <EditText
                        android:id="@+id/shipPostalCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="@dimen/_4sdp"
                        android:inputType="number"
                        android:singleLine="true"
                        android:maxLength="6"
                        android:hint="@string/postal_code"
                        android:textSize="@dimen/_10sdp"
                        android:paddingVertical="@dimen/_9sdp">
                    </EditText>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:theme="@style/EditTextTheme">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeColor="@color/orange"
                    app:hintTextColor="@color/black"
                    app:boxCornerRadiusTopStart="@dimen/_4sdp"
                    app:boxCornerRadiusBottomEnd="@dimen/_4sdp"
                    app:boxCornerRadiusTopEnd="@dimen/_4sdp"
                    app:boxCornerRadiusBottomStart="@dimen/_4sdp"
                    style="@style/EditTextOutLineStyle">
                    <EditText
                        android:id="@+id/shipCityReal"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="@dimen/_4sdp"
                        android:hint="@string/city"
                        android:layout_marginStart="@dimen/_4sdp"
                        android:textSize="@dimen/_10sdp"
                        android:paddingVertical="@dimen/_9sdp">
                    </EditText>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginVertical="@dimen/_4sdp"
            android:weightSum="2">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:theme="@style/EditTextTheme">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeColor="@color/orange"
                    app:hintTextColor="@color/black"
                    app:boxCornerRadiusTopStart="@dimen/_4sdp"
                    app:boxCornerRadiusBottomEnd="@dimen/_4sdp"
                    app:boxCornerRadiusTopEnd="@dimen/_4sdp"
                    app:boxCornerRadiusBottomStart="@dimen/_4sdp"
                    style="@style/EditTextOutLineStyle">
                    <EditText
                        android:id="@+id/shipCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="@dimen/_4sdp"
                        android:hint="@string/select_state"
                        android:textColor="@color/black"
                        android:singleLine="true"
                        android:textSize="@dimen/_10sdp"
                        android:paddingVertical="@dimen/_9sdp">
                    </EditText>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:theme="@style/EditTextTheme">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeColor="@color/orange"
                    app:hintTextColor="@color/black"
                    app:boxCornerRadiusTopStart="@dimen/_4sdp"
                    app:boxCornerRadiusBottomEnd="@dimen/_4sdp"
                    app:boxCornerRadiusTopEnd="@dimen/_4sdp"
                    app:boxCornerRadiusBottomStart="@dimen/_4sdp"
                    style="@style/EditTextOutLineStyle">

                    <EditText
                        android:id="@+id/shipCountry"
                        android:layout_width="match_parent"
                        android:textColor="@color/black"
                        android:text="India"
                        android:fontFamily="@font/lato_regular"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_4sdp"
                        android:paddingHorizontal="@dimen/_4sdp"
                        android:singleLine="true"
                        android:textSize="@dimen/_10sdp"
                        android:paddingVertical="@dimen/_9sdp">
                    </EditText>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal"
            android:weightSum="2">



            <TextView
                android:id="@+id/btnSaveAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3sdp"
                android:layout_weight="1"
                android:background="@drawable/background_orange_border"
                android:fontFamily="@font/lato_regular"
                android:gravity="center"
                android:padding="@dimen/_7sdp"
                android:text="Save Address"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>